tests/models/enum/named/u64/pass/default.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(default = 1)]
        value: u64
    },
}
fn main() {}
