tests/models/enum/named/u64/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(alias = "val")]
        u64
    ),
}
fn main() {}
